# ocaml-scratch

./: .gitmodules  dune-project
lib/: asset.ml  assoc.ml  block.ml  comment.ml  def.ml  dune  id.ml  lst.ml  map.ml  md5.ml  monitor.ml  project.ml  sbool.ml  scratch.ml  stringified.ml  tag.ml  target.ml  util.ml  value.ml  variable.ml
test/: color.json  field.json  nested.json  new.json
tools/: extract_opcodes.sh
web/: client.ml  dune  index.html
